--- a/shop-online/service-partner/.settings/.gitignore
+++ b/shop-online/service-partner/.settings/.gitignore
@@ -6,3 +6,4 @@
 /org.eclipse.wst.jsdt.ui.superType.container
 /org.eclipse.wst.jsdt.ui.superType.name
 /org.eclipse.wst.validation.prefs
+/org.sonar.ide.eclipse.core.prefs
