--- a/shop-online/pom.xml
+++ b/shop-online/pom.xml
@@ -39,11 +39,11 @@
 		<logback.version>1.0.13</logback.version>
 		<spring.version>4.2.6.RELEASE</spring.version>
 		<apachetiles.version>3.0.5</apachetiles.version>
-		<spring-data-jpa.version>1.4.1.RELEASE</spring-data-jpa.version>
-		<spring-security.version>3.2.0.RELEASE</spring-security.version>
-		<hibernate.version>4.2.6.Final</hibernate.version>
+		<spring-security.version>4.0.4.RELEASE</spring-security.version>
+		<springsecurityoauth2.version>2.0.10.RELEASE</springsecurityoauth2.version>
+		<hibernate.version>4.3.11.Final</hibernate.version>
 		<aspectj.version>1.7.2</aspectj.version>
-		<mysql.version>5.1.26</mysql.version>
+		<mysql.version>5.1.31</mysql.version>
 		<jackson-json.version>2.3.1</jackson-json.version>
 		<commons-dbcp.version>1.2.2</commons-dbcp.version>
 		<commons-lang3.version>3.1</commons-lang3.version>
@@ -64,7 +64,7 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<!-- Logging dependencies -->
+		<!-- Logging dependencies 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
@@ -80,6 +80,7 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
@@ -144,6 +145,12 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring-security.version}</version>
 		</dependency>
+		<!-- Spring Security OAuth2-->
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>${springsecurityoauth2.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
