--- a/shop-online/pom.xml
+++ b/shop-online/pom.xml
@@ -6,8 +6,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
-		
-		
+
+
 		<module>web-shop</module>
 		<module>service-auth</module>
 		<module>web-shop-admin</module>
@@ -17,11 +17,11 @@
 		<module>core-web</module>
 		<module>core-dao</module>
 		<module>service-auth-shared</module>
-		
+
 		<module>service-catalogue</module>
 		<module>service-partner</module>
-		
-		
+
+
 		<module>service-catalogue-shared</module>
 		<module>service-partner_shared</module>
 		<module>web-business</module>
@@ -29,8 +29,8 @@
 		<module>service-common-shared</module>
 		<module>service-shop</module>
 		<module>service-shop-shared</module>
-		
-		
+
+
 	</modules>
 	<properties>
 		<java.version>1.7</java.version>
@@ -64,23 +64,11 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<!-- Logging dependencies 
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		-->
+		<!-- Logging dependencies <dependency> <groupId>org.slf4j</groupId> <artifactId>jcl-over-slf4j</artifactId> 
+			<version>${slf4j.version}</version> </dependency> <dependency> <groupId>org.slf4j</groupId> 
+			<artifactId>slf4j-api</artifactId> <version>${slf4j.version}</version> </dependency> 
+			<dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> 
+			<version>${slf4j.version}</version> </dependency> -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
@@ -145,12 +133,12 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring-security.version}</version>
 		</dependency>
-		<!-- Spring Security OAuth2-->
-        <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>${springsecurityoauth2.version}</version>
-        </dependency>
+		<!-- Spring Security OAuth2 -->
+		<dependency>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+			<version>${springsecurityoauth2.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
@@ -234,6 +222,12 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.15</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
