--- a/shop-online/web-spa-business/package.json
+++ b/shop-online/web-spa-business/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.1.0",
     "metismenu": "^2.5.2",
     "moment": "^2.14.1",
+    "ng2-file-upload": "^1.1.2",
     "ng2-translate": "^2.5.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
