--- a/shop-online/pom.xml
+++ b/shop-online/pom.xml
@@ -231,6 +231,11 @@
 			<artifactId>poi</artifactId>
 			<version>3.15</version>
 		</dependency>
+		<dependency>
+		<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.15</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
